tests/negative/semantic/wrong_arg_count_writefile/input.ci
void main() {
    print(toString(writeFile("x")) + "\n");
}
